--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap');
 @import "tailwindcss";
+
+@layer base {
+  html {
+    font-family: 'Pixelify Sans', system-ui, sans-serif;
+    font-weight: 400;
+  }
+}
