--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Tiny5&display=swap');
 @import "tailwindcss";
 
 @layer base {
   html {
-    font-family: 'Pixelify Sans', system-ui, sans-serif;
-    font-weight: 400;
+    font-family: 'Tiny5', system-ui;
+    letter-spacing: -0.5px;
   }
 }
